Updated scripts to use new STARR OMOP extract

--- a/experiments/notebooks/feature_explore.ipynb
+++ b/experiments/notebooks/feature_explore.ipynb
@@ -10,7 +10,8 @@
     "import numpy as np\n",
     "import os\n",
     "import joblib\n",
-    "import pickle"
+    "import pickle\n",
+    "import scipy.sparse as sp"
    ]
   },
   {
@@ -27,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +38,13 @@
     "    if load_extension == \".parquet\":\n",
     "        return pd.read_parquet(filename, columns=columns,**kwargs)\n",
     "    elif load_extension == \".csv\":\n",
-    "        return pd.read_csv(filename, usecols=columns, **kwargs)"
+    "        return pd.read_csv(filename, usecols=columns, **kwargs)\n",
+    "def slice_sparse_matrix(mat, rows):\n",
+    "\tmask = np.zeros(mat.shape[0], dtype=bool)\n",
+    "\tmask[rows] = True\n",
+    "\tw = np.flatnonzero(mask)\n",
+    "\tsliced = mat[w,:]\n",
+    "\treturn sliced"
    ]
   },
   {
@@ -77,7 +84,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "features = joblib.load(os.path.join(feat_path,\"features.gz\"))"
+    "features = joblib.load(os.path.join(feat_path,\"features.gz\"))\n",
+    "# ped_feats = sp.load_npz('/local-scratch/nigam/projects/jlemmon/transfer_learning/experiments/data/bin_features/pediatric/full.npz')\n",
+    "# ad_feats = sp.load_npz('/local-scratch/nigam/projects/jlemmon/transfer_learning/experiments/data/bin_features/adult/full.npz')"
    ]
   },
   {
@@ -147,145 +156,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ad_list = [features[a].todense() for a in ad_rows]\n",
-    "# ped_list = [features[p].todense() for p in ped_rows]"
+    "ad_list = slice_sparse_matrix(features, ad_rows)\n",
+    "ped_list = slice_sparse_matrix(features, ped_rows)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ped_feats = [features.getrow(r) for r in ped_rows]"
+    "sum_ped_list = np.squeeze(np.asarray(ped_list.sum(axis=0)))\n",
+    "sum_ad_list = np.squeeze(np.asarray(ad_list.sum(axis=0)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  (0, 2432)\t1\n",
-      "  (0, 2436)\t1\n",
-      "  (0, 3278)\t1\n",
-      "  (0, 3279)\t1\n",
-      "  (0, 3280)\t1\n",
-      "  (0, 3281)\t1\n",
-      "  (0, 3284)\t1\n",
-      "  (0, 3285)\t1\n",
-      "  (0, 4103)\t1\n",
-      "  (0, 4112)\t1\n",
-      "  (0, 8204)\t1\n",
-      "  (0, 8205)\t1\n",
-      "  (0, 8206)\t1\n",
-      "  (0, 8207)\t1\n",
-      "  (0, 8210)\t1\n",
-      "  (0, 8211)\t1\n",
-      "  (0, 8212)\t1\n",
-      "  (0, 8216)\t1\n",
-      "  (0, 8218)\t1\n",
-      "  (0, 8220)\t1\n",
-      "  (0, 8221)\t1\n",
-      "  (0, 8222)\t1\n",
-      "  (0, 19125)\t1\n",
-      "  (0, 87746)\t1\n",
-      "  (0, 87788)\t1\n",
-      "  :\t:\n",
-      "  (0, 235062)\t1\n",
-      "  (0, 235066)\t1\n",
-      "  (0, 235309)\t1\n",
-      "  (0, 235339)\t1\n",
-      "  (0, 235362)\t1\n",
-      "  (0, 235445)\t1\n",
-      "  (0, 235613)\t1\n",
-      "  (0, 235629)\t1\n",
-      "  (0, 239005)\t1\n",
-      "  (0, 239038)\t1\n",
-      "  (0, 239039)\t1\n",
-      "  (0, 239040)\t1\n",
-      "  (0, 239041)\t1\n",
-      "  (0, 239043)\t1\n",
-      "  (0, 239044)\t1\n",
-      "  (0, 239045)\t1\n",
-      "  (0, 239046)\t1\n",
-      "  (0, 239047)\t1\n",
-      "  (0, 239048)\t1\n",
-      "  (0, 239050)\t1\n",
-      "  (0, 239052)\t1\n",
-      "  (0, 239055)\t1\n",
-      "  (0, 239057)\t1\n",
-      "  (0, 239058)\t1\n",
-      "  (0, 239059)\t1\n"
+      "[0 0 0 ... 0 0 1]\n"
      ]
     }
    ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "pkl_file = open('/local-scratch/nigam/projects/jlemmon/transfer_learning/experiments/data/bin_features/pediatric/full.txt','wb')\n",
-    "pickle.dump(ped_list, pkl_file)"
+    "print(sum_ped_list)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "pkl_file = open('/local-scratch/nigam/projects/jlemmon/transfer_learning/experiments/data/bin_features/adult/full.txt','wb')\n",
-    "pickle.dump(ad_list, pkl_file)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#sum_ped_list = np.sum(np.array(ped_list), axis=1)\n",
-    "#sum_ad_list = ad_list.sum(axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_2349198/936436005.py:1: SparseEfficiencyWarning: Comparing a sparse matrix with 0 using == is inefficient, try using != instead.\n",
-      "  bin_ped_feat_list = [0 if i==0 else 1 for i in sum_ped_list]\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "The truth value of an array with more than one element is ambiguous. Use a.any() or a.all().",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [15]\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0m bin_ped_feat_list \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m0\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m i\u001b[38;5;241m==\u001b[39m\u001b[38;5;241m0\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;241m1\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m sum_ped_list]\n\u001b[1;32m      2\u001b[0m bin_ad_feat_list \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m0\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m i\u001b[38;5;241m==\u001b[39m\u001b[38;5;241m0\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;241m1\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m sum_ad_list]\n",
-      "Input \u001b[0;32mIn [15]\u001b[0m, in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[0;32m----> 1\u001b[0m bin_ped_feat_list \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m0\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m i\u001b[38;5;241m==\u001b[39m\u001b[38;5;241m0\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;241m1\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m sum_ped_list]\n\u001b[1;32m      2\u001b[0m bin_ad_feat_list \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m0\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m i\u001b[38;5;241m==\u001b[39m\u001b[38;5;241m0\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;241m1\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m sum_ad_list]\n",
-      "File \u001b[0;32m/local-scratch/nigam/envs/jlemmon/conl/lib/python3.9/site-packages/scipy/sparse/base.py:283\u001b[0m, in \u001b[0;36mspmatrix.__bool__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    281\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mnnz \u001b[38;5;241m!=\u001b[39m \u001b[38;5;241m0\u001b[39m\n\u001b[1;32m    282\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m--> 283\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mThe truth value of an array with more than one \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    284\u001b[0m                      \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124melement is ambiguous. Use a.any() or a.all().\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[0;31mValueError\u001b[0m: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()."
-     ]
-    }
-   ],
    "source": [
     "bin_ped_feat_list = [0 if i==0 else 1 for i in sum_ped_list]\n",
     "bin_ad_feat_list = [0 if i==0 else 1 for i in sum_ad_list]"
@@ -293,15 +203,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "112439\n",
-      "222242\n"
+      "62955\n",
+      "123532\n"
      ]
     }
    ],
@@ -312,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,17 +253,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "neither:9941\n",
-      "both:105444\n",
-      "pediatric:6995\n",
-      "adult:116557\n"
+      "neither:112425\n",
+      "both:54413\n",
+      "pediatric:8542\n",
+      "adult:69119\n"
      ]
     }
    ],
@@ -364,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
