adding test script, modifying train script to take task as arg for pas arg for parallization, notebooks doing feature exploration

--- a/experiments/notebooks/feature_explore.ipynb
+++ b/experiments/notebooks/feature_explore.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "316548\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(feats_id_map['prediction_id'].unique()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +132,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cohort_pred_id = list(cohort['prediction_id'].unique())\n",
+    "feat_pred_id = list(feats_id_map['prediction_id'].unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "316548\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(feat_pred_id))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cohort_id_map = feats_id_map[feats_id_map['prediction_id'].isin(cohort_pred_id)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cohort_id_map = cohort_id_map.merge(cohort[['person_id','prediction_id']], on='prediction_id')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cohort_features = slice_sparse_matrix(features, list(cohort_id_map['features_row_id']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sum_full_feats = np.squeeze(np.asarray(cohort_features.sum(axis=0)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "cnt = 0\n",
+    "for s in sum_full_feats:\n",
+    "    if s == 0:\n",
+    "        cnt += 1\n",
+    "print(cnt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "316548\n",
+      "(316548, 132194)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(cohort))\n",
+    "print(cohort_features.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,24 +296,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0 0 0 ... 0 0 1]\n"
+      "[0 0 0 ... 0 0 1]\n",
+      "[0 0 0 ... 1 1 0]\n"
      ]
     }
    ],
-   "source": [
-    "print(sum_ped_list)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,15 +322,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "62955\n",
-      "123532\n"
+      "63006\n",
+      "123645\n"
      ]
     }
    ],
@@ -222,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,11 +354,13 @@
     "ped_feat_indices = []\n",
     "ad_feat_indices = []\n",
     "shared_feat_indices = []\n",
+    "neither_feat_indices = []\n",
     "for i in range(len(bin_ped_feat_list)):\n",
     "    ped = bin_ped_feat_list[i]\n",
     "    ad = bin_ad_feat_list[i]\n",
     "    if ped == 0 and ad == 0:\n",
     "        feat_count_dict['neither'] = feat_count_dict['neither'] + 1\n",
+    "        neither_feat_indices.append(i)\n",
     "    elif ped == 1 and ad == 0:\n",
     "        feat_count_dict['pediatric'] = feat_count_dict['pediatric'] + 1\n",
     "        ped_feat_indices.append(i)\n",
@@ -253,17 +374,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "neither:112425\n",
-      "both:54413\n",
-      "pediatric:8542\n",
-      "adult:69119\n"
+      "neither:0\n",
+      "both:54457\n",
+      "pediatric:8549\n",
+      "adult:69188\n"
      ]
     }
    ],
@@ -274,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,13 +423,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
     "pd.DataFrame({'feat_indices':ad_feat_indices}).to_csv('/local-scratch/nigam/projects/jlemmon/transfer_learning/experiments/data/bin_features/only_adult_feats.csv',index=False)\n",
     "pd.DataFrame({'feat_indices':ped_feat_indices}).to_csv('/local-scratch/nigam/projects/jlemmon/transfer_learning/experiments/data/bin_features/only_pediatric_feats.csv',index=False)\n",
     "pd.DataFrame({'feat_indices':shared_feat_indices}).to_csv('/local-scratch/nigam/projects/jlemmon/transfer_learning/experiments/data/bin_features/shared_feats.csv',index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(neither_feat_indices[:10])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1],\n",
+       "       [1],\n",
+       "       [1],\n",
+       "       ...,\n",
+       "       [0],\n",
+       "       [0],\n",
+       "       [0]])"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "features.getcol(0).toarray()"
    ]
   },
   {
